Updated and fixed the cart

--- a/src/language/ru-RU/ru-RU.tpl_lady.ini
+++ b/src/language/ru-RU/ru-RU.tpl_lady.ini
@@ -2,3 +2,5 @@ TPL_LADY_PILLOWS = "Подушки"
 TPL_LADY_TSHIRTS = "Футболки"
 TPL_LADY_BAGS = "Сумки"
 TPL_LADY_NEW_PRODUCTS = "Новинки"
+TPL_LADY_YOUR_CART = "Ваша корзина"
+TPL_LADY_CART_IS_EMPTY = "В вашей корзине пока что нет товаров"
