Updated cart and checkout flows

--- a/src/language/ru-RU/ru-RU.tpl_lady.ini
+++ b/src/language/ru-RU/ru-RU.tpl_lady.ini
@@ -4,3 +4,11 @@ TPL_LADY_BAGS = "Сумки"
 TPL_LADY_NEW_PRODUCTS = "Новинки"
 TPL_LADY_YOUR_CART = "Ваша корзина"
 TPL_LADY_CART_IS_EMPTY = "В вашей корзине пока что нет товаров"
+TPL_LADY_CHECKOUT = "Оформление заказа"
+TPL_LADY_CHECKOUT_COMPLETE = "Подтверждение заказа"
+TPL_LADY_CHECKOUT_DONE = "Подтверждение заказа"
+TPL_LADY_REQUIRED_MARK_DESCRIPTION = "поля обязательные к заполнению"
+TPL_LADY_CHECKOUT_INTRO_TEXT = "Пожалуйста, оставьте немного информации о себе<br/> для того, чтобы мы могли с вами связаться"
+TPL_LADY_BACK_TO_SHOP = "Вернуться в магазин"
+TPL_LADY_CHECKOUT_COMPLETE_RESULT = "Заказ успешно оформлен!"
+TPL_LADY_CHECKOUT_COMPLETE_DESC = "Мы рады что вы воспользовались услугами нашего магазина!<br/>На ваш почтовый ящик было выслано письмо с деталями заказа. <br/>Мы свяжемся с вами в скором времени, чтобы продолжить... :)"
