Updated home page, fixed routes of items in search page.

--- a/src/language/ru-RU/ru-RU.tpl_lady.ini
+++ b/src/language/ru-RU/ru-RU.tpl_lady.ini
@@ -14,3 +14,6 @@ TPL_LADY_CHECKOUT_COMPLETE_RESULT = "Заказ успешно оформлен!
 TPL_LADY_CHECKOUT_COMPLETE_DESC = "Мы рады что вы воспользовались услугами нашего магазина!<br/>На ваш почтовый ящик было выслано письмо с деталями заказа. <br/>Мы свяжемся с вами в скором времени, чтобы продолжить... :)"
 TPL_LADY_PAGE_NOT_FOUND = "Жаль, но такой страницы не существует."
 TPL_LADY_PRICE = "Цена"
+TPL_LADY_COMSEARCH_DESCRIPTION = "Легко ищите товары или друге интересности сайта здесь.<br/>Задайте ключевые слова и остальные критерии поиска"
+TPL_LADY_COMSEARCH_RESULTS = "Результаты поиска"
+TPL_LADY_COMSEARCH_NO_RESULTS_FOUND = "По вашему запросу ничего не найдено.<br/>Попробуйте изменить критерии поиска."
