Cosmetic changes. Moved JS and CSS to their place.

--- a/src/language/ru-RU/ru-RU.tpl_lady.ini
+++ b/src/language/ru-RU/ru-RU.tpl_lady.ini
@@ -17,3 +17,4 @@ TPL_LADY_PRICE = "Цена"
 TPL_LADY_COMSEARCH_DESCRIPTION = "Легко ищите товары или друге интересности сайта здесь.<br/>Задайте ключевые слова и остальные критерии поиска"
 TPL_LADY_COMSEARCH_RESULTS = "Результаты поиска"
 TPL_LADY_COMSEARCH_NO_RESULTS_FOUND = "По вашему запросу ничего не найдено.<br/>Попробуйте изменить критерии поиска."
+TPL_LADY_CATEGORY_IS_EMPTY = "Здесь пока что нет товаров"
