--- a/src/language/en-GB/en-GB.com_users.ini
+++ b/src/language/en-GB/en-GB.com_users.ini
@@ -160,3 +160,4 @@ COM_USERS_USER_FIELD_TIMEZONE_DESC="Choose here your time zone"
 COM_USERS_USER_FIELD_TIMEZONE_LABEL="Time zone"
 COM_USERS_USER_NOT_FOUND="User not found"
 COM_USERS_USER_SAVE_FAILED="Failed to save user: %s"
+COM_USERS_USER_SIGN_IN="Sign in"
