Added regions and conditions

--- a/src/language/ru-RU/ru-RU.com_yoshop.ini
+++ b/src/language/ru-RU/ru-RU.com_yoshop.ini
@@ -65,17 +65,22 @@ COM_YOSHOP_TITLE_ITEM_VIEW_SEARCH="!Title item view search"
 COM_YOSHOP_TITLE_ITEM_VIEW_SEARCH_DESC="!Title item view search desc"
 COM_SEARCH_ERROR_IGNOREKEYWORD="!Error ignorekeyword"
 
-YOSHOP_CONDITION = "Состояние"
-YOSHOP_CONDITION_DESC = "Состояние"
-YOSHOP_CONDITION_1 = "1"
-YOSHOP_CONDITION_2 = "2"
-YOSHOP_CONDITION_3 = "3"
-YOSHOP_CONDITION_4 = "4"
-YOSHOP_CONDITION_5 = "5"
-YOSHOP_CONDITION_NEW = "Новая"
+COM_YOSHOP_CONDITION = "Состояние"
+COM_YOSHOP_CONDITION_DESC = "Состояние"
+COM_YOSHOP_CONDITION_1 = "1"
+COM_YOSHOP_CONDITION_2 = "2"
+COM_YOSHOP_CONDITION_3 = "3"
+COM_YOSHOP_CONDITION_4 = "4"
+COM_YOSHOP_CONDITION_5 = "5"
+COM_YOSHOP_CONDITION_NEW = "Новая"
+COM_YOSHOP_CONDITION_NEW_PRODUCTS = "Новые товары"
+COM_YOSHOP_CONDITION_USED = "Б/у"
+COM_YOSHOP_CONDITION_USED_PRODUCTS = "Б/у товары"
 
-YOSHOP_CONDITION_STATUS = "Статус"
-YOSHOP_CONDITION_STATUS_DESC = "Статус"
+COM_YOSHOP_CONDITION_STATUS = "Статус"
+COM_YOSHOP_CONDITION_STATUS_DESC = "Статус"
+
+COM_YOSHOP_REGIONS = "Регионы"
 
 COM_YOSHOP_PRODUCT_FIELD_COLOR = "Цвет"
 COM_YOSHOP_PRODUCT_FIELD_SIZE = "Размер"
