--- a/src/language/ru-RU/ru-RU.com_yoshop.ini
+++ b/src/language/ru-RU/ru-RU.com_yoshop.ini
@@ -81,6 +81,7 @@ COM_YOSHOP_CONDITION_STATUS = "Статус"
 COM_YOSHOP_CONDITION_STATUS_DESC = "Статус"
 
 COM_YOSHOP_REGIONS = "Регионы"
+COM_YOSHOP_REGION_ANY = "Все регионы"
 
 COM_YOSHOP_PRODUCT_FIELD_COLOR = "Цвет"
 COM_YOSHOP_PRODUCT_FIELD_SIZE = "Размер"
